log_output/gke/service.yaml
# GKE: the Ingress needs a NodePort Service (exercise 3.2). It replaces
# ../manifests/service.yaml (ClusterIP) on GKE: do not apply both.
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
